--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -6,16 +6,80 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-<!--            <xpath expr="//field[@name='name']" position="after">-->
+            <!--            <xpath expr="//field[@name='name']" position="after">-->
             <xpath expr="//div[hasclass('oe_title')]/h1" position="after">
                 <h1 class="d-flex">
                     <field name="name_cv" calss="" placeholder="CV Name"/>
                 </h1>
-<!--                    <button name="print_resume" type="object" string="Print Resume" class="btn btn-primary"/>-->
+                <!--                    <button name="print_resume" type="object" string="Print Resume" class="btn btn-primary"/>-->
 
             </xpath>
         </field>
     </record>
 
+       <record model="ir.ui.view" id="employee_skills_list">
+            <field name="name">Employee Skills</field>
+            <field name="model">hr.employee</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"/>
+                    <field name="resume_line_ids" widget="many2many_tags"/>
+                    <field name="employee_skill_ids" widget="many2many_tags"/>
+                </tree>
+            </field>
+        </record>
+    <record model="ir.ui.view" id="employee_skills_form">
+            <field name="name">Employee Skills</field>
+            <field name="model">hr.employee</field>
+            <field name="arch" type="xml">
+                <form>
+<!--                    <sheet>-->
+                        <group>
+                            <group>
+                                <field name="name"/>
+                            </group>
+                        </group>
+                        <group>
+                            <field name="resume_line_ids">
+                                <tree editable="bottom">
+                                    <field name="name"/>
+                                    <field name="line_type_id" widget="selection"/>
+                                    <field name="description"/>
+                                    <field name="date_start"/>
+                                    <field name="date_end"/>
+                                </tree>
+                            </field>
+                        </group>
+                        <group>
+                            <field name="employee_skill_ids">
+                                <tree editable="bottom">
+                                    <field name="skill_type_id" widget="selection"/>
+                                    <field name="skill_id" domain="[('skill_type_id', '!=', False),('skill_type_id', '=', skill_type_id)]"
+                                           options="{'no_create_edit':True}"/>
+                                    <field name="skill_level_id" domain="[('skill_type_id', '!=', False),('skill_type_id', '=', skill_type_id)]"
+                                           options="{'no_create_edit':True}"/>
+                                </tree>
+                            </field>
+                        </group>
+<!--                    </sheet>-->
+                </form>
+            </field>
+        </record>
+
+    <record model="ir.actions.act_window" id="employee_skills_act_window">
+        <field name="name">Employee Skills</field>
+        <field name="res_model">hr.employee</field>
+        <field name="view_mode">tree</field>
+        <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('hr_extend_ipac.employee_skills_list')}),
+                (0, 0, {'view_mode': 'form', 'view_id': ref('hr_extend_ipac.employee_skills_form')}),
+                ]"/>
+    </record>
+
+
+    <menuitem name="Employee Skills"
+              id="employee_skills_menu"
+              parent="hr.menu_human_resources_configuration"
+              action="employee_skills_act_window"/>
 
 </odoo>
