--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -17,54 +17,58 @@
         </field>
     </record>
 
-       <record model="ir.ui.view" id="employee_skills_list">
-            <field name="name">Employee Skills</field>
-            <field name="model">hr.employee</field>
-            <field name="arch" type="xml">
-                <tree>
-                    <field name="name"/>
-                    <field name="resume_line_ids" widget="many2many_tags"/>
-                    <field name="employee_skill_ids" widget="many2many_tags"/>
-                </tree>
-            </field>
-        </record>
+    <record model="ir.ui.view" id="employee_skills_list">
+        <field name="name">Employee Skills</field>
+        <field name="model">hr.employee</field>
+        <field name="priority">10</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="resume_line_ids" widget="many2many_tags"/>
+                <field name="employee_skill_ids" widget="many2many_tags"/>
+            </tree>
+        </field>
+    </record>
     <record model="ir.ui.view" id="employee_skills_form">
-            <field name="name">Employee Skills</field>
-            <field name="model">hr.employee</field>
-            <field name="arch" type="xml">
-                <form>
-<!--                    <sheet>-->
-                        <group>
-                            <group>
-                                <field name="name"/>
-                            </group>
-                        </group>
-                        <group>
-                            <field name="resume_line_ids">
-                                <tree editable="bottom">
-                                    <field name="name"/>
-                                    <field name="line_type_id" widget="selection"/>
-                                    <field name="description"/>
-                                    <field name="date_start"/>
-                                    <field name="date_end"/>
-                                </tree>
-                            </field>
-                        </group>
-                        <group>
-                            <field name="employee_skill_ids">
-                                <tree editable="bottom">
-                                    <field name="skill_type_id" widget="selection"/>
-                                    <field name="skill_id" domain="[('skill_type_id', '!=', False),('skill_type_id', '=', skill_type_id)]"
-                                           options="{'no_create_edit':True}"/>
-                                    <field name="skill_level_id" domain="[('skill_type_id', '!=', False),('skill_type_id', '=', skill_type_id)]"
-                                           options="{'no_create_edit':True}"/>
-                                </tree>
-                            </field>
-                        </group>
-<!--                    </sheet>-->
-                </form>
-            </field>
-        </record>
+        <field name="name">Employee Skills</field>
+        <field name="model">hr.employee</field>
+        <field name="priority">10</field>
+        <field name="arch" type="xml">
+            <form>
+                <!--                    <sheet>-->
+                <group>
+                    <group>
+                        <field name="name"/>
+                    </group>
+                </group>
+                <group>
+                    <field name="resume_line_ids">
+                        <tree editable="bottom">
+                            <field name="name"/>
+                            <field name="line_type_id" widget="selection"/>
+                            <field name="description"/>
+                            <field name="date_start"/>
+                            <field name="date_end"/>
+                        </tree>
+                    </field>
+                </group>
+                <group>
+                    <field name="employee_skill_ids">
+                        <tree editable="bottom">
+                            <field name="skill_type_id" widget="selection"/>
+                            <field name="skill_id"
+                                   domain="[('skill_type_id', '!=', False),('skill_type_id', '=', skill_type_id)]"
+                                   options="{'no_create_edit':True}"/>
+                            <field name="skill_level_id"
+                                   domain="[('skill_type_id', '!=', False),('skill_type_id', '=', skill_type_id)]"
+                                   options="{'no_create_edit':True}"/>
+                        </tree>
+                    </field>
+                </group>
+                <!--                    </sheet>-->
+            </form>
+        </field>
+    </record>
 
     <record model="ir.actions.act_window" id="employee_skills_act_window">
         <field name="name">Employee Skills</field>
