--- a/static/src/css/report_styles.css
+++ b/static/src/css/report_styles.css
@@ -8,6 +8,16 @@
 
 }
 
+.ipac_cv_header_bw{
+    background-image: url(/hr_extend_ipac/static/src/img/cv_header_bw_2.png);
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    /* background-size: cover; */
+    background-size: 100% 100% ;
+    height: 160px
+
+}
+
 .ipac_cv_header_content{
     /* display: block; */
     /* position: absolute;
@@ -52,8 +62,15 @@
     align-self: center;
 }
 
-.ipac_pagebreak { page-break-before: always; }
-    .ipac_pagebreak_avoid {page-break-inside: avoid;}
+.ipac_pagebreak {
+    page-break-before: always;
+    padding: 2px;
+}
+
+.ipac_pagebreak_avoid {
+    page-break-inside: avoid;
+    padding: 2px;
+}
 
 
 @media print {
