--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -13,12 +13,13 @@
             </xpath>
             <xpath expr="//page[@name='public']" position="inside">
                 <group>
-                    <field name="resume_extend" readonly="1"/>
+                    <field name="resume_extend" readonly="1" invisible="1"/>
                     <field name="resume_projects"/>
                     <field name="resume_capabilities"/>
                     <field name="resume_qualifications"/>
                     <field name="resume_software"/>
                     <field name="resume_trainings"/>
+                    <field name="resume_awards"/>
                 </group>
             </xpath>
         </field>
